--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-    "name": "ci-cd-project",
-    "version": "1.0.0",
-    "description": "Simple CI/CD learning project",
-    "main": "src/index.js",
-    "scripts": {
-      "start": "node src/index.js",
-      "test": "jest --runInBand"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "express": "^4.19.0"
-    },
-    "devDependencies": {
-      "jest": "^29.7.0",
-      "supertest": "^6.3.3"
-    }
+  "name": "ci-cd-project",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node server.js",
+    "test": "jest --runInBand"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0",
+    "supertest": "^6.3.3"
   }
-  
+}
